--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is your new Play application
+pao.pao
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
+Facebook canvas app experiment.
